Implemented option to check rules against publication type